---
title: Location de voitures
---
erDiagram
    Admin {
        string id
        string name
        string email
        string password
    }

    Car {
        string id
        string brand
        string model
        string pricePerDay
    }

    Anonymous_User

    Customer {
        string id
        string name
        string email
        Date driverLicenseObtentionDate
        string password
    }

    Reservation {
        string id
        string startDate
        string endDate
    }

    Insurance {
        string id
        string price
    }

    Payment {
        string id
        string amount
        Date paidAt
    }

    Command {
        string id
        string status
        string totalPrice
    }

    Car ||--o{ Reservation : "est réservée par"

    Command ||--o{ Customer : "est effectuée par"

    Command ||--o{ Payment : "est réglée par"

    Command ||--o{ Insurance : "est couverte par"

    Customer ||--o{ Payment : "est réglée par"

    Admin ||--o{ Car : "gère"

    Anonymous_User ||--o{ Car : "consulte"

    Anonymous_User ||--o{ Customer : "s'inscrit en tant que"

    Command ||--o{ Reservation : "possède une liste de"




